syntax = "proto3";
package oomagent;
option go_package = "/codegen";

import "google/protobuf/struct.proto";
import "status.proto";

service OomAgent {
  rpc OnlineGet(OnlineGetRequest) returns (OnlineGetResponse) {}
  rpc OnlineMultiGet(OnlineMultiGetRequest) returns (OnlineMultiGetResponse) {}
  rpc Sync(SyncRequest) returns (SyncResponse) {}

  rpc ChannelImport(stream ChannelImportRequest) returns (ImportResponse) {}
  rpc Import(ImportRequest) returns (ImportResponse) {}

  rpc ChannelJoin(stream ChannelJoinRequest) returns (stream ChannelJoinResponse) {}
  rpc Join(JoinRequest) returns (JoinResponse) {}

  rpc ChannelExport(ChannelExportRequest) returns (stream ChannelExportResponse) {}
  rpc Export(ExportRequest) returns (ExportResponse) {}
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
}

message Value {
  // The kind of value.
  oneof kind {
    // Represents a null value.
    google.protobuf.NullValue null_value = 1;
    // Represents a int64 value.
    int64 int64_value = 2;
    // Represents a double value.
    double double_value = 3;
    // Represents a string value.
    string string_value = 4;
    // Represents a boolean value.
    bool bool_value = 5;
    // Represents a unix milliseconds value.
    int64 unix_milli_value = 6;
    // Represents a bytes value.
    bytes bytes_value = 7;
  }
}

message OnlineGetRequest {
  string entity_key = 1;
  repeated string feature_names = 2;
}

message FeatureValueMap {
  map<string, Value> map = 1;
}

message OnlineGetResponse {
  google.rpc.Status status = 1;
  FeatureValueMap result = 2;
}

message OnlineMultiGetRequest {
  repeated string entity_keys = 1;
  repeated string feature_names = 2;
}

message OnlineMultiGetResponse {
  google.rpc.Status status = 1;
  map<string, FeatureValueMap> result = 2;
}

message SyncRequest {
  int32 revision_id = 1;
  int32 purge_delay = 2;
}
message SyncResponse {
  google.rpc.Status status = 1;
}

message ChannelImportRequest {
  string group_name = 1;
  string description = 2;
  optional int64 revision = 3;
  bytes row = 4;
}

message ImportResponse {
  google.rpc.Status status = 1;
  int64 revision_id = 2;
}

message ImportRequest {
  string group_name = 1;
  string description = 2;
  optional int64 revision = 3;
  string input_file_path = 4;
  string delimiter = 5;
}

message EntityRow {
  string entity_key = 1;
  int64 unix_milli = 2;
  repeated string values = 3;
}

message ChannelJoinRequest {
  repeated string feature_names = 1;
  EntityRow entity_row = 2;
  repeated string value_names = 3;
}

message ChannelJoinResponse {
  google.rpc.Status status = 1;
  repeated string header = 2;
  repeated Value joined_row = 3;
}

message JoinRequest {
  repeated string feature_names = 1;
  string input_file_path = 2;
  string output_file_path = 3;
}

message JoinResponse {
  google.rpc.Status status = 1;
}

message ChannelExportRequest {
  repeated string feature_names = 1;
  int32 revision_id = 2;
  optional uint64 limit = 3;
}

message ChannelExportResponse {
  google.rpc.Status status = 1;
  repeated string header = 2;
  repeated Value row = 3;
}

message ExportRequest {
  repeated string feature_names = 1;
  int32 revision_id = 2;
  optional uint64 limit = 3;
  string output_file_path = 4;
}

message ExportResponse {
  google.rpc.Status status = 1;
}

message HealthCheckRequest {
}

message HealthCheckResponse {
  google.rpc.Status status = 1;
}
